--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           "Stjernerne står i 'Ro & Fred' konstellation i dag. Nyd stilheden. 🌌",
           "Mars er intens, men din Løve sender beroligende frekvenser. Træk vejret. 🦁",
           "Dagens prognose: 100% chance for savn, men opklaring forude. ❤️",
-          "Universet anbefaler: Hættetrøje, comfort food og ingen store beslutninger. 🍝",
+          "Dagens horoskop for Vædderen indikerer en dag med fokuseret energi og ildtegn. Universet anbefaler: Hygge, comfort food og sutsko",
           "Din intuition er skarp i dag. Stol på den. (Og på Løven). ✨",
           "Advarsel: Risiko for dagdrømmeri midt i arbejdstiden. Copilot ser alt. 🤖",
           "En god dag til at trække 'Citron-kortet' 🍋 hvis verden larmer for meget.",
@@ -413,21 +413,21 @@
         };
 
         const cards = [
-          { day: 1, track: "Justin Bieber – Ghost", fact: "Jeg har en tendens til at skrive “kort” og ende i roman-format. Diagnose.", tanke: "L1 detox starter nu. Mindre mødelokale, mere almindelighed." },
-          { day: 2, track: "Blue – If You Come Back", fact: "Jeg har en meget simpel smag. Det behøver ikke være fancy for at være godt.", tanke: "Bolo, hættetrøjer og ro slår det meste." },
+          { day: 1, track: "Justin Bieber – Ghost", fact: "Jeg er en mand af ord. Har en tendens til at ville skrive kort, men ender i en roman. Diagnose!", tanke: "L1 detox starter nu. Mindre mødelokale, mere almindelighed." },
+          { day: 2, track: "Blue – U Make Me Wanna", fact: "Jeg har en meget simpel smag. Det behøver ikke være fancy for at være godt.", tanke: "Bolo, hættetrøjer og ro slår det meste." },
           { day: 3, track: "Ne-Yo – So Sick", fact: "Jeg kan stadig blive genert, hvis nogen holder øjenkontakt længe nok.", tanke: "Og ja… dine øjne. Wow. De får mig lidt til at føle mig som en flue mod et lys." },
-          { day: 4, track: "Usher – Nice & Slow", fact: "Jeg har en svaghed for mennesker, der er gode ved andre, også når ingen kigger.", tanke: "Det er en af dine bedste sider. Måske den bedste." },
-          { day: 5, track: "Nelly – Just a Dream", fact: "Jeg elsker roadtrip-tanker og dum musik i bilen mere end jeg vil indrømme.", tanke: "Hjemmesko, bolo, popcorn og en kedelig tirsdag. Det er faktisk et mål." },
+          { day: 4, track: "Usher – Nice & Slow", fact: "Jeg har en svaghed for mennesker, der er omsorgsfulde og gode ved andre. Også når ingen kigger.", tanke: "Det er en af dine bedste sider. Måske den bedste." },
+          { day: 5, track: "Nelly – Just a Dream", fact: "Jeg elsker roadtrip-tanker og dum musik i bilen mere end jeg vil indrømme.", tanke: "Hjemmesko, fastelavnsboller, bland-selv-slik og kedelig reality TV. Det er faktisk et mål." },
           { day: 6, track: "Backstreet Boys – Shape of My Heart", fact: "Jeg er bedre til disciplin end til tålmodighed (jeg øver mig).", tanke: "Du gør mig både tryg og glad." },
           { day: 7, track: "Drake – Passionfruit", fact: "Når jeg er presset, bliver jeg enten meget stille eller meget snakkende. Ofte nr. 2 😬", tanke: "Din humor, din ironi og din lethed. Det redder dagen." },
-          { day: 8, track: "Chris Brown – With You", fact: "Jeg kan blive alt for investeret i små interne jokes.", tanke: "Copilot siger “hold ro” – Copilot får sin vilje i dag 🙄✅" },
-          { day: 9, track: "Kanye West – Flashing Lights", fact: "Jeg elsker ligegyldige diskussioner (bolo-opskrifter, popcorn, kongehuset) alt for meget.", tanke: "Jeg savner vores “random emner”-mode." },
+          { day: 8, track: "Chris Brown – With You", fact: "Jeg kan blive alt for investeret i små interne jokes... horoskoper, copilot, osv.", tanke: "Copilot siger “hold ro” – Copilot får sin vilje i dag 🙄✅" },
+          { day: 9, track: "Kanye West – Flashing Lights", fact: "Jeg elsker ligegyldige diskussioner (landbrug, økologi, opskrifter, 90'er og 00'er musik, kongehuset) alt for meget.", tanke: "Jeg savner lidt vores “random emner”-mode." },
           { day: 10, track: "The Weeknd – Die For You", fact: "Jeg er dårligere til at give slip end til at holde fast.", tanke: "Nogle mennesker gør bare noget ved én. Punktum." },
           { day: 11, track: "Drake – Hold On, We’re Going Home", fact: "Jeg har det bedst, når ting får lov til at tage den tid, de tager.", tanke: "En lille hilsen fra barselsboblen. Stadig her." },
-          { day: 12, track: "Justin Bieber – Company", fact: "Jeg er ikke særlig god til overfladiskhed. Jeg foretrækker ægte samtaler.", tanke: "Det er nemt at være sig selv sammen med dig." },
-          { day: 13, track: "The Weeknd – Earned It", fact: "Jeg vil hellere have det virkelige end glansbilledet. Hver gang.", tanke: "Jeg kan lide vores almindelighed sammen. Det føles ikke som et spil." },
+          { day: 12, track: "Justin Bieber – Company", fact: "Jeg er kan godt lide tingene enkelt, simpelt og ærligt. Jeg foretrækker ægte samtaler.", tanke: "Det er så nemt at være sig selv sammen med dig." },
+          { day: 13, track: "The Weeknd – Earned It", fact: "Jeg vil hellere have det virkelige end glansbilledet. Hver gang.", tanke: "Jeg kan lide bare at bruge tid med dig. Snakke. Grine. Det føles ikke som et spil." },
           { day: 14, track: "Usher – U Remind Me", fact: "Jeg glemmer ikke nemt mennesker, der betyder noget for mig.", tanke: "Bare så du ved det." },
-          { day: 15, track: "Kanye West – Good Life", fact: "“Langsomt” er ikke et nederlag. Det er en strategi.", tanke: "Horoskopet siger “genforening”. Jeg siger: vi tager den roligt 🙂" },
+          { day: 15, track: "Kanye West – Good Life", fact: "“Langsomt” er ikke et nederlag. Det er en strategi.", tanke: "Horoskopet siger “mulig snarlig genforening af ildtegn”. Jeg siger: ja tak! 🙂" },
         ];
 
         if (!hasEntered) {
@@ -560,10 +560,10 @@
                 </div>
                 <ul className="text-slate-300 space-y-2 text-xs text-left pl-4">
                   <li className="flex items-start gap-2">
-                    <span className="text-purple-400">01.</span> Åbn kun én fil om dagen.
+                    <span className="text-purple-400">01.</span> Åbn ét kort om dagen.
                   </li>
                   <li className="flex items-start gap-2">
-                    <span className="text-purple-400">02.</span> Audio skal afspilles min. 30s.
+                    <span className="text-purple-400">02.</span> Track skal afspilles min. 30s.
                   </li>
                   <li className="flex items-start gap-2">
                     <span className="text-purple-400">03.</span> Ingen svarpligt. Kun modtagepligt.
